# HandyDisplayPython

./: .gitattributes  .gitignore  LICENSE.txt  README.md  pyproject.toml  requirements-core.txt  requirements-spi.txt  run.bat  run.sh  setup.cfg  setup.py
handy_display/: ImageHelper.py  Options.py  PygameGUI.py  PygameLoaderHelper.py  SPI.py  Secrets.py  __main__.py  main.py
handy_display/mirrors/: IMirror.py  PygameOnlyMirror.py  TFT_LCD_XPT2046_ILI9486_Mirror.py
handy_display/mirrors/Elegoo35/: Constants.py  Elegoo35.py  Elegoo35Mirror.py  ILI9486.py  XPT2046.py
handy_display/sprite/: TestSprite.py
handy_display/widgets/: BoxAlign.py  Config.py  IWidget.py  OverlayWidget.py  TestWidget.py  WeatherWidget.py
notes/: GPIO Pinin-out.txt  example ILI9486 driver.py  open weather response.json  run-sigrok.bat
notes/Datasheets/ELEGOO 3.5 Inch Touch Screen User Manual V1.0.2022.08.02/: Read Me First.txt
notes/weird source codes/: ILI9486.py
resources/: GPIO Pinin-out.txt  example ILI9486 driver.py  example XPT2046 driver.py  open weather response.json  pulseview.pvs  spidev xfer.c  successful transfer.txt
resources/Datasheets/ELEGOO 3.5 Inch Touch Screen User Manual V1.0.2022.08.02/: Read Me First.txt
resources/images/weather/: weather.ase
resources/weird source codes/: ILI9486.py  example XPT2046 driver.py
