
[metadata]
name = "HandyDisplay"
author = "GenElectrovise"
version = attr: handy_display.VERSION
description = The driving software for one particularly handy display.
long_description = file: README.md, LICENSE.txt
license = MIT
url = "https://github.com/GenElectrovise/HandyDisplay"


[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.7
install_requires = 
	pygame>=2.4.0
	requests>=2.31.0
	pillow>=9.5.0
	RPi


[options.extra_require]
spi = spidev
rpi = RPi


[options.packages.find]
exclude = 
	test/*
	config/*


[options.package_data]
placeholder = resources/*


[options.entry_points]
console_scripts = 
	executable_name = handy_display.__main__:main

